--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_APP_TITLE=MTG DeckLists
-NEXT_PUBLIC_DEFAULT_DESCRIPTION=Make something!
+NEXT_PUBLIC_APP_TITLE=𝐹𝒜𝒞𝐸𝒮
+NEXT_PUBLIC_DEFAULT_DESCRIPTION=𝔄שคՇคг 𝟘𝕩𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟘𝟙
 NEXT_PUBLIC_BASE_URL=http://localhost:8080
