--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@zoralabs/nft-components": "^0.3.2",
     "classnames": "^2.3.1",
     "next": "10.2.3",
     "react": "17.0.2",
